# oikosbot

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  0-AI-MANIFEST.a2ml  ARCHITECTURE.adoc  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DEPLOY.adoc  DEPLOY.md  DISAMBIGUATION.adoc  ECOSYSTEM.scm  EXPLAINME.adoc  GOVERNANCE.adoc  Justfile  LICENSE  MAINTAINERS.md  META.scm  QUICKSTART.adoc  QUICKSTART.md  README.adoc  README.md  ROADMAP.adoc  SECURITY.md  STATE.scm  flake.nix  manifest.scm
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md  app.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: cargo-audit.yml  casket-pages.yml  ci.yml  codeql.yml  governance.yml  hypatia-scan.yml  language-policy.yml  oikos.yml  publish-image.yml  quality.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  ts-blocker.yml  workflow-linter.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/integrations/: verisimdb.a2ml
.well-known/: ai.txt  humans.txt  security.txt
LICENSES/: EUPL-1.2.txt
analyzers/code-haskell/: cabal.project  oikos-analyzer.cabal
analyzers/code-haskell/app/: Main.hs
analyzers/code-haskell/src/Eco/: Analysis.hs  Carbon.hs  Energy.hs  Pareto.hs  Resource.hs
analyzers/code-haskell/src/Quality/: Complexity.hs  Coupling.hs  Coverage.hs  Debt.hs
analyzers/code-haskell/src/Types/: Metrics.hs  Report.hs
analyzers/code-haskell/test/: Main.hs
bot-integration/: README.md  ROADMAP.md  deno.json  package.json  rescript.json
bot-integration-affine/: README.adoc  check.sh
bot-integration-affine/src/: Analysis.affine  Config.affine  Externs.affine  GitHubAPI.affine  GitHubApp.affine  Main.affine  Oikos.affine  Payload.affine  Report.affine  Router.affine  Types.affine  VeriSimClient.affine  Webhook.affine
bot-integration-affine/src/tea/: Cmd.affine  Runtime.affine  Sub.affine
bot-integration-affine/test/: Smoke.affine
bot-integration/bindings/: Deno.res  Deno.res.js
bot-integration/scripts/: smee-client.js  smee-client.ts
bot-integration/src/: Analysis.res  Analysis.res.js  Analysis_test.js  Config.res  Config.res.js  GitHubAPI.res  GitHubAPI.res.js  GitHubApp.res  GitHubApp.res.js  Main.res  Main.res.js  Oikos.res  Oikos.res.js  Report.res  Report.res.js  Router.res  Router.res.js  Types.res  Webhook.res.js
bot-integration/src/tea/: ServerTea.res  ServerTea.res.js
config/: oikos.yaml
containers/: Containerfile  Containerfile.policy  compose.yaml  prometheus.yml  vordr-build.sh
containers/production/: .env.example  Caddyfile  README.md  install.sh
containers/production/quadlet/: caddy-data.volume  caddy.container  oikos.network  oikosbot.container
crates/oikosbot-analysis/: Cargo.toml
crates/oikosbot-analysis/src/: analyzer.rs  calibration.rs  carbon.rs  dependencies.rs  directives.rs  language.rs  lib.rs  migration.rs  patterns.rs  security.rs
crates/oikosbot-cli/: Cargo.toml
crates/oikosbot-cli/src/: main.rs
crates/oikosbot-eclexia/: Cargo.toml
crates/oikosbot-eclexia/src/: lib.rs
crates/oikosbot-fleet/: Cargo.toml  README.md
crates/oikosbot-fleet/src/: lib.rs
crates/oikosbot-metrics/: Cargo.toml
crates/oikosbot-metrics/src/: lib.rs
crates/oikosbot-sarif/: Cargo.toml
crates/oikosbot-sarif/src/: lib.rs
database/arango/: schema.js
database/virtuoso/: ontology.ttl  queries.sparql
databases/arangodb/: schema.js
databases/virtuoso/: ontology.ttl  queries.sparql
docs/: DESIGN.adoc  GITHUB_APP_SETUP.adoc  GITHUB_APP_SETUP.md  README.adoc  ROADMAP.adoc  alib-aggregate-bridge.adoc  echo-residue-mapping.adoc  tech-debt-2026-05-26.adoc  tech-debt-2026-05-26.md  verisimdb-client.adoc
docs/disambiguation/: oikos-dsl-vs-oikosbot.adoc
examples/: oikosbot-ci.yml
fuzz/: Cargo.toml
guix/: channels.scm  manifest.scm  oikos.scm
nix/: flake.nix
oikos-check/: Cargo.toml
oikos-check/src/: cross_ref.rs  currency_check.rs  error.rs  godley_check.rs  instrument_check.rs  lib.rs  resolve.rs
oikos-check/tests/: cross_ref.rs  currency.rs  fixtures.rs  godley.rs  instrument.rs
oikos-desugar/: Cargo.toml
oikos-desugar/src/: error.rs  lib.rs
oikos-parser/: Cargo.toml
oikos-parser/src/: error.rs  lexer.rs  lib.rs  parser.rs
oikos-parser/tests/: parser.rs
oikos-syntax/: Cargo.toml
oikos-syntax/src/: account.rs  dimension.rs  error.rs  expr.rs  godley.rs  instrument.rs  lib.rs  model.rs  period.rs  sector.rs  span.rs
policies/: README.adoc  carbon_budget.ecl  energy_threshold.ecl  finding_taxonomy.ecl  memory_efficiency.ecl  security_sustainability.ecl
policy-engine/datalog/: eco_rules.dl
policy-engine/deepproblog/: eco_problog.pl
prompts/: claude-code-instructions.md  copilot-instructions.md  pr-template.md
spec/: SPEC.adoc
