[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# Fuzz the analysis engine. (The workspace root is virtual — there is no crate
# named `oikosbot` at `..`; target the actual library crate instead.)
[dependencies.oikosbot-analysis]
path = "../crates/oikosbot-analysis"

[[bin]]
name = "fuzz_main"
path = "fuzz_targets/fuzz_main.rs"
test = false
doc = false
