# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>

[package]
name        = "oikos-syntax"
description = "Abstract syntax tree for the Oikos SFC modelling DSL"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde.workspace    = true
smol_str.workspace = true
thiserror.workspace = true
