# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "oikosbot-analysis"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Security-sustainability correlation. The optional `panic-attacker` integration
# (a separate hyperpolymath repo) was decoupled when OikosBot was extracted from
# gitbot-fleet so this crate builds standalone; the feature is retained as a
# no-op seam to be re-wired (path or git dep) when that integration is needed.
panic-attack = []

[dependencies]
oikosbot-metrics = { path = "../oikosbot-metrics" }
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
